# NYT_Scraper

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
app/: __init__.py  main.py
app/config/: config.py  logging_config.py
app/models/: top_stories_models.py
app/services/: constants.py  nyt_api_client.py
app/utils/: http_utils.py
config/: config.py
